feat: adicionando endpoint de pesquisa para pacientes
